[metadata]
name = bind2samba-tool-eveith
version = 1.0.0
author = Eric MSP Veith
author_email = eveith@binericien.org
description = Converts a bind zone file to samba-tool invocations
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/eveith/bind2samba-tool
project_urls =
    Bug Tracker = https://github.com/eveith/bind2samba-tool/issues
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Environment :: Console
    Operating System :: Posix
    Operating System :: Posix :: BSD
    Operating System :: Posix :: Linux
    Intended Audience :: System Administrators
entry_points =
    console_scripts =
        bind2samba-tool=bind2samba.py:main

[options]
package_dir =
    = src
python_requires = >=3.6

[options.packages.find]
where = src
